[metadata]
name = h3-pyspark
version = 1.0.0
author = Kevin Schaich
author_email = schaich.kevin@gmail.com
description = PySpark bindings for H3, a hierarchical hexagonal geospatial indexing system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kevinschaich/h3-pyspark
project_urls =
    Bug Tracker = https://github.com/kevinschaich/h3-pyspark/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src